documenting basics
