# src/controllers/message/message.ts
@@ -1,3 +1,6 @@
+// Type definitions for routes
+
+import { UserExample } from "../../types/user-example";
 
 /**
  * 0: Sent, 1: Received, 2: Seen, 3: Deleted
@@ -12,7 +15,8 @@ export enum MessageStatus {
 export interface Message {
     id: string;
     message: string;
-    status: MessageStatus
+    status: MessageStatus;
+    from: UserExample;
 }
 
 export type NewMessage = Pick<Message, 'message'>;
