# src/controllers/message/messageController.ts
@@ -10,13 +10,15 @@ import {
     Route,
     Security,
     SuccessResponse,
+    Tags
   } from "tsoa";
 import { Message, NewMessage } from "./message";
 import { MessageService } from "./messageService";
 import { AuthRequest } from "../../modules/authentication";
 
 
-@Route('messages')
+@Tags("Messages") // group endpoints
+@Route("messages") // base route `/messages`
 export class MessageController extends Controller {
 
     /**
@@ -34,16 +36,16 @@ export class MessageController extends Controller {
      * Example AuthToken: abc123456
      */
     @SuccessResponse("201", "Created") // Custom success response
-    @Security("AuthToken")
-    @Post()
+    @Security("AuthToken") // use authentication
+    @Post("send") // add sub route `/messages/send`
     public async sendMessage(
-        @Request() request: AuthRequest,
-        @Body() requestBody: NewMessage
-    ): Promise<void> {
+        @Request() request: AuthRequest, // inject Express Request extended to include `user` object that is injected from the authentication module.
+        @Body() requestBody: NewMessage // Body of the Request
+    ): Promise<Message> {
         this.setStatus(201); // set return status 201
         console.log('endpoint', request.user);
+    
         
-        new MessageService().send(requestBody);
-        return;
+        return new MessageService().send(requestBody, request.user);
     }
 }
